# BNOT_new

./: .gitignore  PROVENANCE.md  README.md
ibnot_cli/: convex_polygon.h  domain.h  environment.yml  io.cpp  main_cli.cpp  pgm.h  random.h  scene.h  setup_env.sh  types.h
ibnot_cli/matrix/: suite_sparse_qr.h
ibnot_cli/prebuilt/linux-x86_64/: BUILD_INFO.txt  README.md  ibnot_new_cli
ibnot_cli/results/: bluenoise_uniform_256.eps  bluenoise_uniform_256.txt  linear_ramp_256x256.pgm  ramp_result_256.eps  ramp_result_256.txt
ibnot_cli/scripts/: package_linux_x86_64.sh
ibnot_new/: CMakeLists.txt  energy.cpp  environment.yml  io.cpp  main_cli.cpp  optimizer.cpp  primitives.h  rt2.h  scene.h  setup_env.sh
ibnot_new/results/: bluenoise_uniform_256.txt  uniform_64x64.pgm
ibnot_new/testdata/: smoke_8x8.pgm
python/: README.md  pyproject.toml
python/notebooks/: bnot_quickstart.ipynb  bnot_quickstart_colab.ipynb
python/src/ibnot_cli_wrapper/: __init__.py  api.py
