[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibnot-cli-wrapper"
version = "0.1.0"
description = "Thin Python subprocess wrapper for ibnot_new_cli"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Musialski Research Group" }
]
dependencies = ["numpy"]

[project.optional-dependencies]
notebook = [
  "matplotlib",
  "jupyterlab",
  "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
